make cool example

--- a/test.html
+++ b/test.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>Hydrogen VM Test</title>
-    <source src="test.hasm" id="hasm">
     <script src="tools.js"></script>
     <script src="vm.js"></script>
-    <script src="asm.js"></script>
+    <script src="machinecode.js"></script>
     <script src="test.js"></script>
   </head>
   <body>
